# OsFinalProject

./: .gitattributes  .gitignore  CMakeLists.txt  PPT.md  README.md  package-lock.json  实现点对应代码.md
gateway/: package-lock.json  package.json  server.js
guidance/: Operating_Systems_Training_Guide_English.txt  操作系统课程项目报告模板.doc
report/: final_report  report.md  report_final_en.md  report_final_zh.md  report_zh.md
src/: CMakeLists.txt
src/client/: cli.cpp  cli.hpp  main.cpp
src/client/net/: tcp_client.cpp  tcp_client.hpp
src/common/: logger.hpp  protocol.hpp  thread_pool.hpp  types.hpp
src/domain/: auth.cpp  auth.hpp  paper.hpp  permissions.cpp  permissions.hpp  review.hpp  roles.hpp  user.cpp  user.hpp
src/server/: main.cpp  server_app.cpp  server_app.hpp
src/server/filesystem/: block_cache.hpp  inode.hpp  superblock.hpp  vfs.cpp  vfs.hpp
src/server/handlers/: admin_handler.hpp  author_handler.cpp  author_handler.hpp  command_utils.hpp  editor_handler.cpp  editor_handler.hpp  reviewer_handler.cpp  reviewer_handler.hpp
src/server/net/: tcp_server.cpp  tcp_server.hpp
src/server/services/: fs_service.cpp  fs_service.hpp  paper_service.cpp  paper_service.hpp
tools/: parse_data_fs.py
web/: admin.html  author.html  editor.html  index.html  login.html  reviewer.html
